--- a/src/styles/components/toolbar/_tags.sass
+++ b/src/styles/components/toolbar/_tags.sass
@@ -6,11 +6,11 @@ uni-tags
         background-color: transparent
         background-image: unicon-tags($uni-color-negative)
         background-repeat: no-repeat
-        background-position: left .5rem center
+        background-position: left center
         background-size: .8rem auto
         box-shadow: none
         border: none
-        padding: 0 .5rem 0 1.5rem
+        padding: 0 0 0 1.5rem
 
         &:hover
             background-color: mix($uni-color-positive, $uni-color-toolbar, 20%)
