--- a/src/styles/specifics/timetracking/regtime/__regtime.sass
+++ b/src/styles/specifics/timetracking/regtime/__regtime.sass
@@ -346,17 +346,13 @@ uni-feedback
     @media screen and (max-width: 1000px)
         display: none
 
-uni-breadcrumbs
-    @media screen and (max-width: 1000px)
-        display: none
-
 time-approve-modal
-    
+
     dialog.uniModal .modal-content
         width: 95vw
 
     .dialog-container
-        max-height: 70vh        
+        max-height: 70vh
         overflow: auto
 
 button.dialog
@@ -425,7 +421,7 @@ uni-file-import input
         background-color: #0f4880
         border-radius: 12px
         transition: linear 1s
-    
+
 
 .timetracking_worked_today_text
     float: left
